--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+/*Cascading style sheets*/
+body{
+    background-color: #121214;
+}
+
+
 /* body, table, input, button {
     font: 300 16px/140% 'Roboto', sans-serif;
   }
