--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 DECLARAÇÕES - INSTRUÇÕES PRO ESTILO DO DOCUMENTO
 */
 body{
-    font:16px sans-serif;
+    font:16px 'Roboto' sans-serif;
     background-color: #121214;
     color: #fff;
 }
