--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 /*Cascading style sheets
 DECLARAÇÕES - INSTRUÇÕES PRO ESTILO DO DOCUMENTO
+PODE AGRUPAR OUTROS SELETORES
+QUESTAO ESPECIFICIDADE
 */
 body{
-    font:16px 'Roboto' , 
-    sans-serif;
+    font:16px 'Roboto' ,  sans-serif;
     background-color: #121214;
     color: #fff;
 }
