--- a/main.css
+++ b/main.css
@@ -18,7 +18,8 @@ table {
         margin: 32px;
 }
 table thead{
-  font-size: 14px;  
+  font-size: 14px;
+  line-height: 16px;  
 }
 
 /* body, table, input, button {
