--- a/main.css
+++ b/main.css
@@ -23,8 +23,11 @@ table thead{
 thead th,tbody td{
     padding: 12px 16px; /*preenchimento*/
 }
-tbody{
+tbody td{
     border-top: 1px solid #fff;
+    font-size: 13px;
+    line-height: 15px;
+    color: ;
 }
 
 /* body, table, input, button {
