--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ tbody td{
     border-top: 1px solid #fff;
     font-size: 13px;
     line-height: 15px;
-    color: ;
+    color: #c4c4cc ;
 }
 
 /* body, table, input, button {
