--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@ tbody td strong{
     color: #fff;
     font-size:14px;
     line-height: 16px; 
+    font-weight: 600;
 }
 /* body, table, input, button {
     font: 300 16px/140% 'Roboto', sans-serif;
