--- a/main.css
+++ b/main.css
@@ -35,6 +35,11 @@ tbody td strong{
     line-height: 16px; 
     font-weight: 600;
 }
+tbody td small{
+    font-size: 12px;
+    line-height: 16px;
+    
+}
 /* body, table, input, button {
     font: 300 16px/140% 'Roboto', sans-serif;
   }
