--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ thead th,tbody td{
     padding: 12px 16px; /*preenchimento*/
 }
 tbody td{
-    border-top:var(--border)
+    border-top:var(--border);
     font-size: 13px;
     line-height: 15px;
     color: #c4c4cc ;
