--- a/main.css
+++ b/main.css
@@ -26,6 +26,9 @@ body{
     background-color: #121214;
     color: #fff;
 }
+.container{
+    max-width: 690px;
+}
 header{
     padding: 28px 0;
 }
