--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ body{
 .container{
     max-width: 690px;
     margin: 0 auto;
-    padding: 32px;
+    padding:20px 32px;
 }
 header{
     padding: 28px 0;
