--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ fieldset > div{
     gap: 12px ; /* espaço entre itens dentro do display*/
 }
 .input-wrapper{
-
+flex: 1;
 }
 table {
    border-collapse: collapse;
