--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ gap:12px;
 border: var(--border);
 border-radius: 10px;
 padding: 8px 12px;
+font: 400 14px/150% 'Roboto';
 }
 input{
     all: unset;
