--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ border: var(--border);
 border-radius: 10px;
 padding: 8px 12px;
 font: 400 14px/150% 'Roboto', sans-serif;
+color:#c4c4cc;
 }
 input{
     all: unset;
