--- a/main.css
+++ b/main.css
@@ -65,7 +65,8 @@ fieldset button{
     width: fit-content;
     border: 0;
     background: #f48f56;
-
+    border-radius: 10px;
+    padding: 7px 20px;
 }
 table {
    border-collapse: collapse;
