--- a/main.css
+++ b/main.css
@@ -67,6 +67,8 @@ fieldset button{
     background: #f48f56;
     border-radius: 10px;
     padding: 7px 20px;
+
+    font: 700 12px/24px 'Roboto', sans-serif;
 }
 table {
    border-collapse: collapse;
