--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ fieldset button{
     padding: 7px 20px;
 
     font: 700 12px/24px 'Roboto', sans-serif;
+    color:#00292e;
 }
 table {
    border-collapse: collapse;
